--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
     <link rel="stylesheet" href="css/style.css"/>
+    <script type="text/javascript" src="script.js"</script>
 
 </head>
 
@@ -25,10 +26,10 @@
                 <div class="col-md-12">
 
                     <h1>I Am a Journalist and Programmer</h1>
-                    <div class="byline">By <a href="#">Your Name Here, Esq.</a></div>
+                    <div class="byline">By <a href="#">Micheala Sosby, Esq.</a></div>
 
                     <div class="meta">
-                        Published Jan. 1 2016
+                        Published March 2, 2016
                     </div>
                 </div>
             </header>
@@ -40,10 +41,19 @@
                 <!--
                     1. Create an empty table with two class names: "donations" and "table"
                     2. Create three table columns in the table head (thead): "Date", "Info" and "Amount"
-                    2. Us your script.js file to populate the table body (tbody) with values from the contributions data. 
+                    2. Us your script.js file to populate the table body (tbody) with values from the contributions data.
                     3. Use CSS to right align the dollar amounts.
                     4. Title your page appropriately and add your byline.
                 -->
+                <table>
+                  <thead>
+                    <th>Date</th>
+                    <th>Info</th>
+                    <th>Amount</th>
+                  </thead>
+                  <tbody>
+
+                </table>
 
             </div>
 
@@ -60,7 +70,7 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    
+
     <!-- D3.js -->
     <!-- <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> -->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/queue-async/1.0.7/queue.js" charset="utf-8"></script> -->
