--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
-    <title>Graphic title here</title><?php /* EDIT ME */ ?>
+    <title>Donations Made To Kurt Schaefer's Campaign</title><?php /* EDIT ME */ ?>
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -25,8 +25,8 @@
                 <div class="social-links col-md-12"></div>
                 <div class="col-md-12">
 
-                    <h1>I Am a Journalist and Programmer</h1>
-                    <div class="byline">By <a href="#">Micheala Sosby, Esq.</a></div>
+                    <h1 class="align">Donations Made To Kurt Schaefer's Campaign</h1>
+                    <div class="byline">By <a href="www.michealasosby.com">Micheala Sosby</a></div>
 
                     <div class="meta">
                         Published March 2, 2016
@@ -37,7 +37,7 @@
             <section class="row">
 
             <div class="col-md-12 chart">
-                <h3>Chart Subtitle Here</h3>
+                <p>Kurt Schaefer is a Republican in the Missouri Senate and represents the nineteenth senatorial district, which includes Boone and Cooper counties. He's currently running for attorney general.</p>
                 <!--
                     1. Create an empty table with two class names: "donations" and "table"
                     2. Create three table columns in the table head (thead): "Date", "Info" and "Amount"
@@ -45,21 +45,17 @@
                     3. Use CSS to right align the dollar amounts.
                     4. Title your page appropriately and add your byline.
                 -->
-                <table class="donations" "table">
+                <table class="table">
                   <thead>
                   <tr>
-                    <th>Date</th>
-                    <th>Info</th>
-                    <th>Amount</th>
+                    <th>Contribution Date</th>
+                    <th>Contribution Information</th>
+                    <th class="amount">Amount</th>
                   </tr>
                   </thead>
-                  <tbody>
-                    <tr>
-                      <td>{{amount}}</td>
-                      <td>{{info}}</td>
-                      <td>{{date}}</td>
-                    </tr>
-                    <tbody>
+                  <tbody class="tbody">
+
+                  </tbody>
                 </table>
 
             </div>
@@ -67,7 +63,7 @@
             </section>
 
             <footer>
-                <div id="source-line">Source: Source goes here.</div>
+                <div id="source-line">Source: Missouri Ethics Commission, senate.mo.gov</div>
             </footer>
 
         </div>
